# recipe-to-markdown

./: .gitignore  README.md  pure_recipe.py  pyproject.toml  recipe2md.py  requirements.txt
src/recipe2md/: __init__.py  recipe2md.py
